--- a/package.json
+++ b/package.json
@@ -26,5 +26,11 @@
     "postcss-nested": "^5.0.5",
     "tailwindcss": "^2.0.3",
     "vite": "^2.0.5"
-  }
+  },
+  "browserslist": [
+    "> 1%",
+    "last 2 versions",
+    "not IE <= 11",
+    "safari >= 9"
+  ]
 }
