--- a/package.json
+++ b/package.json
@@ -7,12 +7,13 @@
   "license": "MIT",
   "description": "Vite, React, Tailwind, Redux Toolkit Template\n",
   "scripts": {
-    "dev": "vite",
+    "dev": "vite --host",
     "build": "vite build",
     "serve": "vite preview"
   },
   "dependencies": {
     "@reduxjs/toolkit": "^1.5.0",
+    "aplayer": "^1.10.1",
     "classnames": "^2.3.1",
     "react": "^17.0.0",
     "react-dom": "^17.0.0",
