更新弹框内容，弹框的时候暂停音乐

--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "license": "MIT",
   "description": "Vite, React, Tailwind, Redux Toolkit Template\n",
   "scripts": {
-    "dev": "vite --host",
+    "dev": "vite",
     "build": "vite build",
     "serve": "vite preview"
   },
