--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react": "^17.0.0",
     "react-dom": "^17.0.0",
     "react-redux": "^7.2.2",
+    "redux": "^4.1.2",
     "typed.js": "^2.0.12"
   },
   "devDependencies": {
